refatorando frontend, incluindo service e home

--- a/chatbot-backend/pom.xml
+++ b/chatbot-backend/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.2.6.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>br.com.logatti</groupId>
-	<artifactId>chatbot</artifactId>
+	<groupId>br.edu.logatti</groupId>
+	<artifactId>chatinteligente</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>chatbot</name>
-	<description>Demo project for Spring Boot</description>
+	<name>ChatInteligente</name>
+	<description>Projeto de Chat Inteligente</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -33,24 +33,13 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-jdbc</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
-		</dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
