--- a/chatbot-backend/src/main/resources/application.properties
+++ b/chatbot-backend/src/main/resources/application.properties
@@ -1,18 +1,8 @@
-# Schema será atualizado automaticamente de acordo com as entidades java encontradas
-spring.jpa.hibernate.ddl-auto=update
-
-# URL de conexão para o banco de dados SET GLOBAL time_zone = '+3:00'
-spring.datasource.url=jdbc:mysql://localhost:3306/chatbot?useLegacyDatetimeCode=true&serverTimezone=UTC
-
-# Nome de usuário e senha
-spring.datasource.username=root
-spring.datasource.password=root
-
-# Permite que o Hibernate gere SQL otimizado para um DBMS específico e Utilização TimeZone
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.properties.hibernate.jdbc.time_zone=UTC
-
-# Mostra ou não registra para cada consulta sql
+spring.datasource.url=jdbc:postgresql://localhost:5432/chatbot
+spring.datasource.username=postgres
+spring.datasource.password=12345
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-
