--- a/chatbot-frontend/package.json
+++ b/chatbot-frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~9.1.4",
     "bootstrap": "^4.4.1",
     "jquery": "^3.5.0",
+    "moment": "^2.25.3",
     "ngx-toastr": "^12.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
